--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,15 @@
 /* app css stylesheet */
 
+body {
+   background-color: #eef;     
+}
+#tabs {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
