--- a/app/app.css
+++ b/app/app.css
@@ -3,6 +3,15 @@
 body {
    background-color: #eef;     
 }
+
+#gauge {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    width: 200px;
+    height: 200px;
+}
+
 #tabs {
     width: 95%;
     margin-left: auto;
